tests/ui/transmute-ref-src-dst-not-references.nightly.stderr
error[E0308]: mismatched types
  --> $DIR/transmute-ref-src-dst-not-references.rs:16:54
   |
16 | const SRC_DST_NOT_REFERENCES: usize = transmute_ref!(0usize);
   |                                       ---------------^^^^^^-
   |                                       |              |
   |                                       |              expected `&_`, found `usize`
   |                                       expected due to this
   |
   = note: expected reference `&_`
                   found type `usize`
help: consider borrowing here
   |
16 | const SRC_DST_NOT_REFERENCES: usize = transmute_ref!(&0usize);
   |                                                      +

error[E0308]: mismatched types
  --> $DIR/transmute-ref-src-dst-not-references.rs:16:39
   |
16 | const SRC_DST_NOT_REFERENCES: usize = transmute_ref!(0usize);
   |                                       ^^^^^^^^^^^^^^^^^^^^^^ expected `usize`, found `&_`
   |
   = note:   expected type `usize`
           found reference `&_`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> $DIR/transmute-ref-src-dst-not-references.rs:16:39
   |
16 | const SRC_DST_NOT_REFERENCES: usize = transmute_ref!(0usize);
   |                                       ^^^^^^^^^^^^^^^^^^^^^^ expected `usize`, found `&_`
   |
   = note:   expected type `usize`
           found reference `&_`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> $DIR/transmute-ref-src-dst-not-references.rs:16:39
   |
16 | const SRC_DST_NOT_REFERENCES: usize = transmute_ref!(0usize);
   |                                       ^^^^^^^^^^^^^^^^^^^^^^ expected `usize`, found `&_`
   |
   = note:   expected type `usize`
           found reference `&_`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> $DIR/transmute-ref-src-dst-not-references.rs:16:39
   |
16 | const SRC_DST_NOT_REFERENCES: usize = transmute_ref!(0usize);
   |                                       ^^^^^^^^^^^^^^^^^^^^^^ expected `usize`, found `&_`
   |
   = note:   expected type `usize`
           found reference `&_`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0308`.
